# my_ros_template

liyb_msg/: CMakeLists.txt  package.xml
liyb_msg/msg/: id.msg
liyb_test/: CMakeLists.txt  package.xml
liyb_test/src/: main.cpp
